Fixed mobile overflow bug

--- a/src/layouts/PageLayout/PageLayout.module.scss
+++ b/src/layouts/PageLayout/PageLayout.module.scss
@@ -25,6 +25,7 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
+    overflow: hidden;
 
     &__hero {
       margin-inline: auto;
